--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -29,30 +29,131 @@
 
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
+    // =========QUESTION ONE==============
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    
+    // const fifteen = inventors.filter(inventor => {
+    //   if(inventor.year >= 1500 && inventor.year < 1600){
+    //     return true;
+    //   }
+    // });
+
+    // Shorter verson below
+    const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
+
+    console.table(fifteen);
+
+    // =========QUESTION TWO==============
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
 
+    // const firstAndLast = inventors.map(people => {
+    //     return people.first + ' ' + people.last;
+    // });
+
+    // console.table(firstAndLast);
+
+    // Wes's answer below:
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(fullNames);
+
+    // =========QUESTION THREE==============
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.sort((a, b) => {
+        if(a.year > b.year){
+          return 1;
+        } else {
+          return -1
+        }
+    });
+    console.table(ordered);
+
+    // below is the shorthand method
+
+    const ordered2 = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
+    console.table(ordered2);
+
+
+    // =========QUESTION FOUR==============
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total, inventor) => {
+        return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalYears);
+
+
+    // =========QUESTION FIVE==============
 
     // 5. Sort the inventors by years lived
+
+    const oldest = inventors.sort((a,b) => {
+      if((a.passed - a.year) > (b.passed - b.year)){
+        return 1;
+      } else {
+        return -1;
+      }
+    });
+    console.table(oldest);
+
+    // Wes's amswer below
+    const oldest2 = inventors.sort(function(a,b){
+      const lastGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+      return lastGuy > nextGuy ? -1 : 1;
+    });
+    console.table(oldest2);
+
+    // =========QUESTION SIX==============
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // const category = document.querySelector('.mw-category');
+    // // Need to convert 'links' from Node item to an array to be able to use map.
+    // const links = Array.from(category.querySelectorAll('a'));
+    // // another version below using spreads..need to research spreads later <.<
+    // // const links = [...category.querySelectorAll('a')];
+
+    // const de = links
+    //           .map(link => link.textContent)
+    //           .filter(streetName => streetName.includes('de'));
+
+
+    // =========QUESTION SEVEN==============
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort(function(lastOne, nextOne){
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? -1 : 1;
+    });
+    console.log(alpha);
+
+    // =========QUESTION EIGHT==============
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce(function(obj, item){
+      if(!obj[item]) {
+          obj[item] = 0;
+        }
+        obj[item]++;
+        return obj;
+
+    }, {});
+    console.log(transportation);
 
   </script>
 </body>
