--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,66 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    // const isAdult = people.some(function(person){
+    //   const currentYear = (new Date()).getFullYear();
+    //   if(currentYear - person.year >= 19){
+    //     return true;
+    //   }
+    // });
+
+    // console.log(isAdult);
     // Array.prototype.every() // is everyone 19 or older?
+
+    // const everyAdult = people.every((people) => {
+    //   const currentYear = (new Date()).getFullYear();
+    //   if(currentYear - people.year <= 19){
+    //     return true;
+    //   } else {
+    //     return false;
+    //   }
+    // });
+
+    // console.log(everyAdult);
+
+    // Wes's Solution:
+
+    const isAdult = people.some(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19;
+    });
+
+    console.log({isAdult});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const idSearch = comments.find((comments) => {
+      if(comments.id === 823423){
+        return comments;
+      }
+    });
+
+    console.log(idSearch.text);
+
+    // Wes's Solution
+    const comment = comments.find(comment => comment.id === 823423);
+
+    console.log(comment);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+
+    // comments.splice(index, 1);
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
 
   </script>
 </body>
